--- a/7-guia/ejercicios-7/ej-24-7.tex
+++ b/7-guia/ejercicios-7/ej-24-7.tex
@@ -1,1 +1,8 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+	Sea $(f_n)_{n\en \naturales}$ la sucesión de polinomios en $\complejos[X]$ definida por
+	$$
+		f_1 = X^4 + 2X^2 + 1 \ytext f_{n+1} = (X - i)(f_n + f'n), \quad \paratodo n \en \naturales.
+	$$
+	Probar que $i$ es raíz \textit{doble} de $f_n$ para todo $n \en \naturales$.
+\end{enunciado}
+\hacer
