--- a/5-guia/ejercicios-5/ej-15-5.tex
+++ b/5-guia/ejercicios-5/ej-15-5.tex
@@ -18,17 +18,19 @@
           \Sii{PTF}
           \congruencia{3^{1427}}{3^3}{5} \ytext 3^3 = 27 \conga5 2
         $$
-                Por lo tanto:
-                $$
-                r_5(33^{1427}) = 2
-                $$
+        Por lo tanto:
+        $$
+          r_5(33^{1427}) = 2
+        $$
   \item
         Rescribo: $22283 = 22280 + 3$ y notar que el $r_{10}(22280) = 0$
         $$
           a = 71^{22283} =
           71^{22280 + 3} =
           71^{22280} \cdot 71^3
-          \taa{PTF}{\red{!}}\congruente 71^3 \ (11) \sii \congruencia{a}{5^3 \congruente 4}{11}
+          \taa{\text{PTF}}{\red{!}}\congruente 71^3 \ (11)
+          \sii
+          \congruencia{a}{5^3 \congruente 4}{11}
         $$
         Por lo tanto:
         $$
@@ -46,20 +48,18 @@
             \congruencia{a}{5 \cdot 5 - 23 \cdot 12}{13}
           \end{array}
         $$
-        \textit{\faIcon{calculator} Nota que puede ser de interés:}\par
-        Con la calculadora salen fácil los cálculos, pero está bueno poder calcularlos a mano masajeando las potencias, onda
-        $8^6 = 64^3 \conga{13} (-1)^3 = -1 \conga{13} 12$\par
-        \textit{\faIcon{calculator} Fin Nota que puede ser de interés.}
+        \parrafoDestacado[\faIcon{calculator}]{
+          \textit{Nota que puede ser de interés:}
 
+          Con la calculadora salen fácil los cálculos, pero está bueno poder calcularlos a mano masajeando las potencias, onda
+          $8^6 = (8^2)^3 = 64^3 \conga{13} (-1)^3 = -1 \conga{13} 12$
+        }
         Un par de cuentas y calcular congruencia y queda:
         $$
           \congruencia{a}{9}{13}
         $$
 \end{enumerate}
 
-% Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
