--- a/7-guia/ejercicios-7/ej-27-7.tex
+++ b/7-guia/ejercicios-7/ej-27-7.tex
@@ -1,1 +1,19 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+  \begin{enumerate}[label=\roman*)]
+    \item Hallar todas la raíces racionales de
+          \begin{enumerate}[label=(\alph*)]
+            \item $2X^5 + 3X^4 + 2X^3 - X$,
+            \item $X^5 - \frac{1}{2} X^4 - 2X^3 + \frac{1}{2} X^2 - \frac{7}{3}X -3$,
+          \end{enumerate}
+    \item Probar que $X^4 + 2X^3 - 3X^2 - 2$ no tiene raíces racionales.
+  \end{enumerate}
+\end{enunciado}
+
+\begin{enumerate}[label=\roman*)]
+  \item
+        \begin{enumerate}[label=(\alph*)]
+          \item \hacer
+          \item \hacer
+        \end{enumerate}
+  \item \hacer
+\end{enumerate}
