--- a/7-guia/ejercicios-7/ej-38-7.tex
+++ b/7-guia/ejercicios-7/ej-38-7.tex
@@ -1,1 +1,9 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+	\begin{enumerate}[label=\roman*)]
+		\item Hallar todas las raíces en $\complejos$ del polinomio $f = X^4 - (i + 4)X^3 + (8 + 4i)X^2 - (2i + 24)X + 12$
+		      sabiendo que tiene al menos una raíz real.
+		\item Hallar todas las raíces en $\complejos$ del polinomio $f = X^6 - (2 + 8i)X^3 + 24iX + 12i$,
+		      sabiendo que tiene al menos una raíz entera.
+	\end{enumerate}
+\end{enunciado}
+\hacer
