--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -76,8 +76,8 @@
 \newcommand{\divsetP}[2]{\mathcal{D_+}(#1) = \set{#2}}
 \newcommand{\ub}[2]{\underbrace{\textstyle #1}_{\mathclap{#2}}}
 \newcommand{\ob}[2]{\overbrace{\textstyle #1}^{\mathclap{#2}}}
-\newcommand{\ua}[2]{\underset{\everymath{\textstyle}\mathclap{\substack{\downarrow \\  #2}}}{#1}}
-\newcommand{\oa}[2]{\overset{\everymath{\textstyle}\mathclap{\substack{#2 \\ \uparrow }}}{#1}}
+\newcommand{\ua}[2]{\underset{\mathclap{\substack{\downarrow \\ \everymath{\textstyle} #2}}}{#1}}
+\newcommand{\oa}[2]{\overset{\mathclap{\substack{\everymath{\textstyle}#2 \\ \uparrow }}}{#1}}
 \def\cop{\, \perp \, }
 \def\nocop{\, \not\perp \, }
 
